--- a/src/components/navbar/style_navbar.module.css
+++ b/src/components/navbar/style_navbar.module.css
@@ -32,13 +32,15 @@
   width: 100%;
   top: 0;
   background: var(--main-background-color);
+  opacity : 0.8;
   box-shadow: 0px -2px 20px rgba(0, 0, 0, 0.2);
 }
 
 .containerIcons {
   display: flex;
   justify-content: space-between;
-  padding: 25px 20px;
+  padding: 35px 8% 5px 8%;
+  
 }
 
 .iconClose {
@@ -48,6 +50,7 @@
 
 .iconMain {
   font-size: var(--text-h1);
+  margin-right: 10px;
 }
 
 .containerFixed {
