--- a/src/components/projects/style_projects.module.css
+++ b/src/components/projects/style_projects.module.css
@@ -46,8 +46,7 @@
 
 /* Estilos para el contenedor de cada imagen */
 .containerProjects .containerImg {
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: all 0.4s;
   -webkit-transition: all 0.4s;
@@ -58,12 +57,13 @@
 
 /* Estilos para las imágenes */
 .containerProjects .containerImg img {
-  width: 100%;
-}
-
-.views {
+  border-radius: 5px;
   width: 100%;
   height: 100%;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 /*-----------------------------------*/
