--- a/src/components/skills/style_skills.module.css
+++ b/src/components/skills/style_skills.module.css
@@ -23,6 +23,7 @@
 /* Media screen mobile */
 
 .containerSkills {
+  margin: 0 auto;
   padding: 45px 0px 30px 0px;
   background: var(--secondary-background-color);
 }
@@ -32,6 +33,8 @@
   text-align: center;
   color: var(--text-color-on-secondary-background);
   padding: 50px 60px;
+  padding:10% 7%;
+  margin: 0 auto;
 }
 
 .frontendParentContainer {
@@ -98,7 +101,7 @@
   .containerSkills {
     display: flex;
     align-items: center;
-    padding: 80px 0px 50px 0px;
+    padding: 6% 0px 6% 0px;
   }
 
   .text {
