--- a/src/components/skills/style_skills.module.css
+++ b/src/components/skills/style_skills.module.css
@@ -80,19 +80,11 @@
   width: 16%;
   max-width: 90px;
   margin: 0px 10px;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  -ms-transition: all 0.4s;
-  -o-transition: all 0.4s;
+  transition: transform 0.4s;
 }
 
 .icon:hover {
   transform: scale(1.2);
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  -o-transform: scale(1.2);
 }
 
 /*-----------------------------------*/
