--- a/src/components/education/style_education.module.css
+++ b/src/components/education/style_education.module.css
@@ -42,6 +42,7 @@
   margin: 0px 20px 10px 20px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  transition: color 0.3s, background 0.3s; 
 }
 
 .icon {
@@ -78,8 +79,7 @@
     width: 350px;
     height: 410px;
     margin: 40px 20px 10px 20px;
-    transition: all 0.3s;
-    -webkit-transition: background 0.3s;
+    transition: color 0.3s, background 0.3s; 
   }
 
   .squareContainer:hover {
