--- a/src/components/footer/style_footer.module.css
+++ b/src/components/footer/style_footer.module.css
@@ -93,20 +93,13 @@
   font-size: 40px;
   color: var(--text-color-on-secondary-background);
   margin: 0 10px;
-  transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -ms-transition: all 0.3s;
-  -o-transition: all 0.3s;
+  transition: color 0.3s, transform 0.3s;
 }
 
 .containerFooter .icon:hover {
   transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
 }
+
 
 .creator {
   opacity: 0.4;
