--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  scroll-behavior: auto;
+  scroll-behavior: smooth;
   margin: 0px;
   font-family: 'Playpen Sans', cursive;
   box-sizing: border-box;
