Haciendo que la barra de navegacion se quede fija no se como

--- a/src/components/footer/style_footer.module.css
+++ b/src/components/footer/style_footer.module.css
@@ -62,6 +62,7 @@
 .containerContact .buttonCv {
   background: #333333;
   margin-top: 15px;
+  padding: 10px 22px;
 }
 
 .containerContact button a {
